--- a/Assets/Resources/UI/Styles/TabbedMenu.uss
+++ b/Assets/Resources/UI/Styles/TabbedMenu.uss
@@ -39,7 +39,7 @@
     padding-bottom: 2px;
 }
 
-.selectedTab {
+.tab-selected {
     height: 25px;
 }
 
@@ -52,10 +52,10 @@
     padding: 0;
 }
 
-#close {
+.close {
     width: 10px;
     height: 10px;
-    background-color: rgba(197, 40, 40, 255);
+    background-color: rgb(197, 40, 40);
     border-left-width: 2px;
     border-right-width: 2px;
     border-top-width: 2px;
@@ -76,4 +76,33 @@
     padding-right: 4px;
     padding-top: 4px;
     padding-bottom: 4px;
+}
+
+.TabbedMenuArea {
+    margin-left: 3px;
+    margin-right: 3px;
+    margin-top: 3px;
+    margin-bottom: 3px;
+}
+
+.windowBackground {
+    background-color: rgb(159, 62, 35);
+    border-left-width: 2px;
+    border-right-width: 2px;
+    border-top-width: 2px;
+    border-bottom-width: 2px;
+    border-left-color: rgb(108, 61, 48);
+    border-right-color: rgb(108, 61, 48);
+    border-top-color: rgb(108, 61, 48);
+    border-bottom-color: rgb(108, 61, 48);
+    border-top-left-radius: 4px;
+    border-bottom-left-radius: 4px;
+    border-top-right-radius: 4px;
+    border-bottom-right-radius: 4px;
+    max-width: 200px;
+    min-width: 100px;
+    align-items: stretch;
+    position: absolute;
+    top: 0;
+    left: 0;
 }
