--- a/Assets/Resources/UI/UXML/TabbedMenu.uxml
+++ b/Assets/Resources/UI/UXML/TabbedMenu.uxml
@@ -2,11 +2,11 @@
     <Style src="project://database/Assets/Resources/UI/Styles/TabbedMenu.uss?fileID=7433441132597879392&amp;guid=98083fee9497abb4bac471950f77fea9&amp;type=3#TabbedMenu" />
     <ui:VisualElement name="TabbedMenu">
         <ui:VisualElement name="tabs">
-            <ui:Label text="properties" name="propertiesTab" class="tab selectedTab" />
-            <ui:Label text="production" display-tooltip-when-elided="true" name="productionTab" class="tab" />
-            <ui:Label text="inventory" display-tooltip-when-elided="true" name="inventoryTab" class="tab" />
+            <ui:Label text="properties" name="propertiesTab" display-tooltip-when-elided="true" class="tab tab-selected" />
+            <ui:Label text="production" name="productionTab" display-tooltip-when-elided="true" class="tab" />
+            <ui:Label text="inventory" name="inventoryTab" display-tooltip-when-elided="true" class="tab" />
         </ui:VisualElement>
-        <ui:VisualElement name="tabContentContainer" class="tabContainer">
+        <ui:VisualElement name="tabContentContainer">
             <ui:VisualElement name="propertiesContent">
                 <ui:Label text="properties" style="white-space: normal;" />
             </ui:VisualElement>
