--- a/Assets/Resources/UI/UXML/PopupProperties.uxml
+++ b/Assets/Resources/UI/UXML/PopupProperties.uxml
@@ -1,6 +1,4 @@
 <ui:UXML xmlns:ui="UnityEngine.UIElements" xmlns:uie="UnityEditor.UIElements" xsi="http://www.w3.org/2001/XMLSchema-instance" engine="UnityEngine.UIElements" editor="UnityEditor.UIElements" noNamespaceSchemaLocation="../../../../UIElementsSchema/UIElements.xsd" editor-extension-mode="False">
-    <Style src="project://database/Assets/Resources/UI/Styles/TabbedMenu.uss?fileID=7433441132597879392&amp;guid=98083fee9497abb4bac471950f77fea9&amp;type=3#TabbedMenu" />
-    <ui:VisualElement name="Screen" picking-mode="Ignore" style="flex-grow: 1;">
-        <Assets.Scripts.UI.TabbedMenuCustomControl />
-    </ui:VisualElement>
+    <Style src="project://database/Assets/Resources/UI/Styles/PopUpStylesheet.uss?fileID=7433441132597879392&amp;guid=62ca1d63193900945afb2a0ca9dae492&amp;type=3#PopUpStylesheet" />
+    <Assets.Scripts.UI.PopUpCustomControl picking-mode="Ignore" />
 </ui:UXML>
