--- a/Assets/Resources/UI/UXML/PopUpTemplate.uxml
+++ b/Assets/Resources/UI/UXML/PopUpTemplate.uxml
@@ -3,9 +3,9 @@
     <Style src="project://database/Assets/Resources/UI/Styles/PopUpStylesheet.uss?fileID=7433441132597879392&amp;guid=62ca1d63193900945afb2a0ca9dae492&amp;type=3#PopUpStylesheet" />
     <ui:VisualElement name="PopUpWindow" class="windowBackground">
         <ui:VisualElement name="WindowHeader" class="WindowHeader">
-            <ui:Label text="Label" display-tooltip-when-elided="true" name="Title" />
+            <ui:Label text="Label" display-tooltip-when-elided="true" name="HeaderLabel" />
             <ui:Button text="X" name="CloseButton" class="Close" />
         </ui:VisualElement>
-        <ui:VisualElement name="ContentArea" style="min-width: 100px; min-height: 30px; margin-left: 2px; margin-right: 2px; margin-top: 2px; margin-bottom: 2px;" />
+        <ui:VisualElement name="ContentArea" style="margin-left: 2px; margin-right: 2px; margin-top: 2px; margin-bottom: 2px; min-width: 100px; min-height: 10px; max-height: 200px; max-width: 200px;" />
     </ui:VisualElement>
 </ui:UXML>
